fix price&collapse demo

--- a/src/price/demo/demo.css
+++ b/src/price/demo/demo.css
@@ -1,10 +1,3 @@
-.price-list {
-  padding: 0 .1rem;
-  background-color: #fff;
-  margin-top: .1rem;
-  border-radius: .1rem;
-}
-
 .price-type{
   color: #2196f3;
   font-weight: bold;
@@ -15,7 +8,6 @@
 .price-item-wrap {
   padding: .2rem 0 .1rem;
   display: flex;
-  border-bottom: solid 1px #e3e5e9;
   width: 100%;
   align-items: center;
   color: #999;
